--- a/MedMon/res/values/strings.xml
+++ b/MedMon/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="medicationCounter">00:00:00</string>
     <string name="button1">Medicine Set-Up</string>
     <string name="title_activity_next">NextActivity</string>
+    <string name="medicineSetUp">Large Text</string>
+    <string name="Name of Drug:">drugName</string>
+    
+    <string name="prescribedTimeMssg">Prescribed Time</string>
 
 </resources>
